--- a/src/pages/Smash4Bio/smash4bio.css
+++ b/src/pages/Smash4Bio/smash4bio.css
@@ -8,24 +8,92 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
 }
 
 .stat-panel{
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .smash-4-title {
 
     text-align: center;
+    font-size: 34px;
 }
 
 .smash-4-throws-cont {
 
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+  
 }
 
 .smash-4-throws {
-    background-color: tan;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style: none;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+    padding: 30px;
+    
+}
+
+
+.stat-cont {
+    width: 15%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   
+}
+
+span {
+    font-weight: 250;
+    font-style: oblique;
+}
+
+.bio-nav-cont {
+    display: flex;
+    flex-direction: row;
+   margin-top: 3%;
+    gap: 1%;
+}
+
+.bio-nav-cont a {
+    text-decoration: none;
+    font-size: 20px;
+     color: blanchedalmond;
+     font-style: oblique;
+     margin-left: 4%;
+     padding: 5px
+    
+}
+
+.bio-nav-cont a:hover {
+    background-color: rgb(145, 143, 72);
+    border-radius: 4px;
+    transition-duration: .4s;
+}
+
+.bio-cont {
+    display: flex;
+    flex-direction: row;
+    border-bottom-style: solid;
+    justify-content: space-between;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.bio-cont p {
+    font-size: 30px;
+    margin-bottom: 0px;
+    margin-right: 4%;
+    font-style: oblique;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
